# Aegis-FL-Byzantine-Defense

./: LICENSE  README.md  pyproject.toml  requirements.txt
dashboard/: app.py  global_model_FedAvg.npz  metrics.jsonl
docs/: Aegis_FL_Whitepaper.md
experiments/: simulate.py
src/adversary/: attacks.py
src/data/: dataset_generator.py
src/fl_client/: client.py
src/fl_server/: server.py
src/model/: sentinel_mock.py
tests/: test_client.py  test_dataset.py  test_metrics.py  test_model.py  test_strategy.py
