[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-fl"
version = "0.1.0"
description = "Federated Learning Byzantine Fault Tolerance Simulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "flwr",
    "streamlit",
    "plotly",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "experiments*"]
